# mashu

./: README.md  index.css  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml
plugins/: login_google.ts  simple_google_search.json  simple_google_search.mmd  simple_google_search.ts  simple_trigger.ts  simple_youtube_search.ts
server/: Cargo.toml
server/src/: application.rs  lib.rs  main.rs  misc.rs  option.rs  task.rs  task_helper.rs
src/: App.css  App.tsx  Editor.module.css  content.tsx  editor.css  editor.tsx  main.tsx  node.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: application.rs  lib.rs  misc.rs  option.rs  task.rs
template/: node.json
