[package]
name = "mashu"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mashu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cron = "0.13"
chrono = "0.4"
regex = "1.11"
base64 = "0.22"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
petgraph = "0.6"
webdriver = "0.51"
thirtyfour = "0.34"
tauri-plugin-shell = "2"
tauri = { version = "2", features = [] }
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
